# FairPlay

./: README.md  index.php  wf-pico.c  wf.c
pico/: CMakeLists.txt  fairplay.c
